objects/Stud_metadata__mdt.object
<CustomObject>
    <fields>
        <fullName>Course_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Course Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Course__c</fullName>
        <label>Course</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BE</fullName>
                    <default>true</default>
                    <label>BE</label>
                </value>
                <value>
                    <fullName>BCom</fullName>
                </value>
                <value>
                    <fullName>BA</fullName>
                </value>
                <value>
                    <fullName>MBBS</fullName>
                </value>
                <value>
                    <fullName>BHMS</fullName>
                </value>
                <value>
                    <fullName>BCA</fullName>
                </value>
                <value>
                    <fullName>BCS</fullName>
                </value>
                <value>
                    <fullName>BBA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>S_Mob_No__c</fullName>
        <label>S Mob No</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>S_Name__c</fullName>
        <label>S Name</label>
        <length>101</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S_roll_no__c</fullName>
        <label>S roll no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Stud metadata</label>
    <pluralLabel>Stud metadatas</pluralLabel>
</CustomObject>